# messaging

client/: Cargo.toml
client/src/: main.rs
client/src/client/: events.rs  incoming_messages.rs  mod.rs  ui.rs
protocol/: Cargo.toml
protocol/src/: encrypt.rs  lib.rs  multicast.rs
protocol/src/network_message/: client_identity.rs  message.rs  mod.rs  personal_id.rs  user_join.rs  user_leave.rs  user_list.rs
server/: Cargo.toml
server/src/: main.rs
