[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.3.0", features = ["debug"] }
protocol = { path = "../protocol" }
iced_native = "0.4.0"
image = "0.23.14"
